feat(BeanValidation) ISS-059: Add other study's from bean validation